# tsonnet

./: .mise.toml  DEVELOPMENT.md  Makefile  README.md  dune-project  tsonnet.opam
lib/: ast.ml  dune  json.ml  lexer.mli  lexer.mll  parser.mly  tsonnet.ml
samples/: binary_operations.json  binary_operations.jsonnet  concat_strings.json  concat_strings.jsonnet
samples/comments/: comments.jsonnet  unterminated_block.jsonnet
samples/errors/: malformed_string.jsonnet
samples/literals/: array.json  array.jsonnet  float.json  float.jsonnet  negative_float.json  negative_float.jsonnet  object.json  object.jsonnet
samples/strings/: concat_to_multiple_types.json  concat_to_multiple_types.jsonnet
test/: dune  test_tsonnet.ml
test/cram/: binary_operations.t  comments.t  concat_strings.t  dune  errors.t  literals.t  strings.t
